# performance-samples

./: .gitignore  .gitmodules  CODEOWNERS  README.md  pull_benchmark_data.sh  pull_traces.sh
.github/: CODEOWNERS  blunderbuss.yml  ci-gradle.properties  dependabot.yml
.github/workflows/: copy-branch.yml  firebase_test_lab.yml  generate-bp.yml  macrobenchmark.yml
BenchmarkAppSample/: .gitignore  settings.gradle
BenchmarkAppSample/app/: build.gradle
BenchmarkAppSample/benchmark/: build.gradle
BenchmarkNdkSample/: .gitignore  README.md  build.gradle  gradle.properties
BenchmarkNdkSample/benchmark/: build.gradle
BenchmarkNdkSample/benchmark/cpp/: CMakeLists.txt
BenchmarkNdkSample/benchmark/cpp/benchmark/: SampleBenchmarks.cpp
BenchmarkNdkSample/benchmark/cpp/googlebenchmarkrunner/: googlebenchmarkrunner.cpp
BenchmarkSample/: README.md  build.gradle  settings.gradle
BenchmarkSample/benchmark/: build.gradle
BenchmarkSample/microbenchmark/: build.gradle
BenchmarkSample/ui/: build.gradle
BenchmarkSamples/: .gitignore  build.gradle  settings.gradle
BenchmarkSamples/app/: build.gradle
ConstraintLayoutPerformance/: README.md  build.gradle  run.sh
JankStats/: settings.gradle
JankStatsSample/: README.md  build.gradle  settings.gradle  settings.gradle.kts
MacrobenchmarkSample/: .firebaserc  README.md  build.gradle  build.gradle.kts  com.example.macrobenchmark-benchmarkData.json  gradle.properties  gradlew  settings.gradle  settings.gradle.kts
MicrobenchmarkSample/: README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
(+258 files in other folders)
